# legends-hours-interface

./: README.md  playground.ipynb  pyproject.toml
legends_hours/: __main__.py  legends_hours.db  settings.py
legends_hours/client/: main.py  sub_commands.py
legends_hours/file_management/: input.py  output.py
legends_hours/store/: schema.py  sqlite_db.py
tests/files/: 5-28-2023-6-3-2023_River-Oaks_Bi-Weekly_punch-detail-report.csv
