[tool.poetry]
name = "legends-hours"
version = "0.1.0"
description = ""
authors = ["Ashia Livaudais <pantagruelspendulum@protonmail.com>"]
readme = "README.md"
packages = [{include = "legends_hours"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
attrdict = "^2.0.1"
attrdict3 = "^2.0.2"
gooey = "^1.0.8.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
